--- a/index.html
+++ b/index.html
@@ -100,10 +100,84 @@
                     <img src="user.jpg">
                 </div>
 
+
+
+
             </div>
+
+
+            <!--Cards-->
+            <div class="cardBox">
+                <div class="card">
+                    <div>
+                        <div class="numbers">1,504</div>
+                        <div class="cardName">Daily Views</div>
+
+
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">80</div>
+                        <div class="cardName">Sales</div>
+
+
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">284</div>
+                        <div class="cardName">Comments</div>
+
+
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="chatbubbles-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">$7,852</div>
+                        <div class="cardName">Earnings</div>
+
+
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="cash-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
+
+            <!-- order detail list -->
+            <div class="details">
+                <div class="recentOrders">
+                    <div class="cardHeader">
+                        <h2>
+                            Recent Orders</h2>
+                        <a href="#" class="btn">View All</a>   
+
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>name</td>
+                                <td>price</td>
+                                <td>payment</td>
+                                <td>status</td>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+
+
         </div>
-
-
     </div>
 
 
